--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <meta name="description" content="Site de pedidos de comida"
     <meta name="keywords" content="food, comida, delivery de comida, ifood">
     <link rel="stylesheet" href="/Site-Freelance/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>Sabor do Sitio</title>
 </head>
 <body>
     <nav class="navbar">
+        
         <div class="logo">
             <a href="#"><img height="100px" src="img/logo.png"></a>
         </div>
@@ -25,14 +27,47 @@
             <h2 style="letter-spacing:7px; font-size:25px; padding:0;">O melhor <strong>delivery</strong></h2>
             <h2 style="font-size:70px">do Sitio Cercado</h2>
             <p>Imensa diversidade de comidas a seu dispor, confira nossas opções e faça já seu pedido!</p>
-            <a href="#" class="cardapio-btn">Cardapio</a>
         </div>
         <div class="img-headline">
-            <img style="max-width:100%" src="img/burger.png">
+            <img style="max-width:100%" src="img/delivery.png">
         </div>
     </header>
-    <section>
-        
-    </section>
+    <div class="cardapio-home">
+            <a class="cardapio-home-item" href="/Site-Freelance/cardapio/sushi.html"><img src="https://upload.wikimedia.org/wikipedia/commons/6/60/Sushi_platter.jpg"><h3>comida japonesa</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>restaurante popular</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>comida chinesa</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>comida mexicana</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>comida mineira</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>comida fit & low carb</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>Sopas e caldos</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>casa das massas</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>pizza e esfiha</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>hamburgueria e lancheria</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>pastelaria do china</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>hot dog dogão</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>porções</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>salgados especiais</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>doces e sobremesas</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>padaria delícias da vovó</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>produtos orgânicos</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>horti fruti</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>produtos colonial</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>sucos naturais</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>casa do coco bahia</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>carnes nobres & exóticas</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>produtos naturais</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>carnes assadas</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>peixaria Rio e Mar</h3></a>
+            <a class="cardapio-home-item" href="#"><h3>Adega bebidas</h3></a>
+        </div>
+    </div>
+    <footer>
+        <div class="logo-rodape">
+            <h1 class="Sitio">Sabor do Sítio</h1>
+            <p style="color:white">O melhor delivery do Sitio Cercado e região!!</p>
+        </div>
+        <b style="color:white; margin-bottom: 0;">© Todos os direitos reservados</b>
+    </footer>
+    <a class="whats" target="_blank" href="#"><img width="150px" src="img/whats-logo.png"</a>
 </body>
 </html>
